src/components/About/About.css
#about {
    padding: 2rem 16rem;
}

@media screen and (max-width: 768px) {
    #about {
        padding: 2rem 1rem;
    }
}

.about-container {
    padding-top: 1rem;
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 4rem;
}

@media screen and (max-width: 992px) {
    .about-container {
        grid-template-columns: 1fr;
        gap: 2rem;
    }
}

@media screen and (max-width: 768px) {
    .about-container {
        grid-template-columns: 1fr 1fr;
    }
}

@media screen and (max-width: 576px) {
    .about-container {
        grid-template-columns: 1fr;
    }
}

.about-left {
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

@media screen and (max-width: 992px) {
    .about-left {
        text-align: center;
    }
}

@media screen and (max-width: 768px) {
    .about-left {
        text-align: left;
    }

    .about-left p {
        padding: 0 1rem;
    }
}

@media screen and (max-width: 576px) {
    .about-left {
        text-align: center;
    }
}

.about-image {
    display: flex;
    justify-content: center;
    align-items: center;
}

.about-image img {
    width: 50%;
    padding: 1rem;
    border-radius: 100rem;
}

.about-right {
    display: flex;
    flex-direction: column;
}

@media screen and (max-width: 992px) {
    .about-right h3{
        text-align: center;
    }
}

@media screen and (max-width: 768px) {
    .about-right h3 {
        text-align: left;
    }
}

@media screen and (max-width: 576px) {
    .about-right h3 {
        text-align: center;
    }
}

.about-right img {
    filter: drop-shadow(0 0 1px var(--background));
}

.experience-container {
    padding: 1rem 1rem 2rem 1rem;
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.experience-card {
    padding: 1rem;
    display: grid;
    grid-template-columns: 1fr 3fr;
    gap: 1.5rem;
    border-radius: 1rem;
    background-color: var(--card);
    transition: 0.5s;
}

.experience-image {
    background-color: rgba(0, 0, 0, 0);
    display: flex;
    justify-content: center;
    align-items: center;
}

.experience-image img {
    height: 6rem;
    width: 6rem;
    border-radius: 1rem;
    object-fit: contain;
    background-color: rgba(0, 0, 0, 0);
}

.experience-details {
    display: flex;
    flex-direction: column;
    justify-content: center;
    background-color: rgba(0, 0, 0, 0);
}

.experience-details h4, p {
    background-color: rgba(0, 0, 0, 0);
}

.skills-container {
    width: 100%;
    padding: 1rem 1rem 2rem 1rem;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    gap: 1rem;

}

.skill-card img {
    background-color: rgba(0, 0, 0, 0);
    filter: drop-shadow(0 0 0.5px var(--subtext));
    -webkit-filter: drop-shadow(0 0 0.5px var(--subtext));
    display: flex;
    width: 3rem;
}

@media screen and (max-width: 768px) {
    .skill-card img {
        width: 2.5rem;
    }
}

